# nuvie

./: .gitignore  AUTHORS  Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  AnimManager.cpp  AnimManager.h  Background.cpp  Background.h  Book.cpp  Book.h  CMakeLists.txt  ChangeLog  CommandBar.cpp  CommandBar.h  CommandBarNewUI.cpp  CommandBarNewUI.h  Console.cpp  Console.h  Converse.cpp  Converse.h  ConverseGump.cpp  ConverseGump.h  ConverseGumpWOU.cpp  ConverseGumpWOU.h  ConverseInterpret.cpp  ConverseInterpret.h  ConverseSpeech.cpp  ConverseSpeech.h  Cursor.cpp  Cursor.h  Debug.cpp  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  EggManager.cpp  EggManager.h  Event.cpp  (+60 more)
GUI/: GUI.cpp  GUI.h  GUI_CallBack.h  GUI_Console.cpp  GUI_Console.h  GUI_Dialog.cpp  GUI_Dialog.h  GUI_DragArea.h  GUI_DragManager.cpp  GUI_DragManager.h  GUI_ScrollBar.cpp  GUI_ScrollBar.h  GUI_Scroller.cpp  GUI_Scroller.h  GUI_TextInput.cpp  GUI_TextInput.h  GUI_TextToggleButton.cpp  GUI_TextToggleButton.h  GUI_YesNoDialog.cpp  GUI_YesNoDialog.h  GUI_area.cpp  GUI_area.h  GUI_button.cpp  GUI_button.h  GUI_font.cpp  GUI_font.h  GUI_loadimage.cpp  GUI_loadimage.h  GUI_status.h  GUI_text.cpp  GUI_text.h  GUI_types.h  GUI_widget.cpp  GUI_widget.h  GUI_widgets.h  the_font.h
PBBuild/: main.cpp  nuvie.icns
PBBuild/English.lproj/: InfoPlist.strings
PBBuild/Nuive.pbproj/: project.pbxproj
XCodeBuild/: Info-Nuvie.plist  main.cpp
actors/: Actor.cpp  Actor.h  ActorList.h  ActorManager.cpp  ActorManager.h  MDActor.cpp  MDActor.h  SEActor.cpp  SEActor.h  U6Actor.cpp  U6Actor.h  U6ActorTypes.h  U6WorkTypes.h  WOUActor.cpp  WOUActor.h
conf/: ConfigNode.h  Configuration.cpp  Configuration.h  XMLNode.cpp  XMLNode.h  XMLTree.cpp  XMLTree.h  misc.h
data/: defaultkeys.txt  sekeys.txt  spells.nsl  u6keys.txt
files/: Makefile  NuvieBmpFile.cpp  NuvieBmpFile.h  NuvieFileList.cpp  NuvieFileList.h  NuvieIO.cpp  NuvieIO.h  NuvieIOFile.cpp  NuvieIOFile.h  TMXMap.cpp  TMXMap.h  U6Bmp.cpp  U6Bmp.h  U6File.cpp  U6File.h  U6Lib_n.cpp  U6Lib_n.h  U6Lzw.cpp  U6Lzw.h  U6Shape.cpp  U6Shape.h  dict.h  lzw.c  stack.c  stack.h
fonts/: BMPFont.cpp  BMPFont.h  ConvFont.cpp  ConvFont.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  U6Font.cpp  U6Font.h  WOUFont.cpp  WOUFont.h
keybinding/: KeyActions.cpp  KeyActions.h  Keys.cpp  Keys.h  KeysEnum.h  Utils.cpp  Utils.h
ldoc/: config.ld  index.html
lua/: lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltable.h  (+12 more)
menus/: AudioDialog.cpp  AudioDialog.h  CheatsDialog.cpp  CheatsDialog.h  GameMenuDialog.cpp  GameMenuDialog.h  GameplayDialog.cpp  GameplayDialog.h  InputDialog.cpp  InputDialog.h  JoystickDialog.cpp  JoystickDialog.h  VideoDialog.cpp  VideoDialog.h
misc/: CallBack.h  MapEntity.h  SDLUtils.cpp  SDLUtils.h  SDL_compat.h  U6LList.cpp  U6LList.h  U6LineWalker.cpp  U6LineWalker.h  U6def.h  U6misc.cpp  U6misc.h  iAVLTree.cpp  iAVLTree.h
msvc/: .gitignore  msvc_build_notes.txt  msvc_inc.h  msvc_kludges.h  nuvie-msvc11.sln  nuvie-msvc15.sln  nuvie.dsp  nuvie.dsw  nuvie.vcxproj  nuvie.vcxproj.filters
pathfinder/: AStar.cpp  AStar.h  AStarPath.cpp  AStarPath.h  ActorPathFinder.cpp  ActorPathFinder.h  CombatPathFinder.cpp  CombatPathFinder.h  DirFinder.cpp  DirFinder.h  LPath.cpp  LPath.h  PartyPathFinder.cpp  PartyPathFinder.h  Path.cpp  Path.h  PathFinder.cpp  PathFinder.h  SchedPathFinder.cpp  SchedPathFinder.h  SeekPath.cpp  SeekPath.h  U6AStarPath.cpp  U6AStarPath.h  ZPath.cpp  ZPath.h
portraits/: Portrait.cpp  Portrait.h  PortraitMD.cpp  PortraitMD.h  PortraitSE.cpp  PortraitSE.h  PortraitU6.cpp  PortraitU6.h
save/: Objlist.h  SaveDialog.cpp  SaveDialog.h  SaveGame.cpp  SaveGame.h  SaveManager.cpp  SaveManager.h  SaveSlot.cpp  SaveSlot.h
screen/: Dither.cpp  Dither.h  GamePalette.cpp  GamePalette.h  Scale.cpp  Scale.h  Scale.inl  Screen.cpp  Screen.h  Surface.cpp  Surface.h
script/: Script.cpp  Script.h  ScriptActor.cpp  ScriptActor.h  ScriptCutscene.cpp  ScriptCutscene.h
sound/: AdLibSfxManager.cpp  AdLibSfxManager.h  CustomSfxManager.cpp  CustomSfxManager.h  OriginFXAdLibDriver.cpp  OriginFXAdLibDriver.h  PCSpeakerSfxManager.cpp  PCSpeakerSfxManager.h  Sample.cpp  Sample.h  SfxManager.h  Song.cpp  Song.h  SongAdPlug.cpp  SongAdPlug.h  SongCustom.cpp  SongCustom.h  Sound.h  SoundManager.cpp  SoundManager.h  TownsSfxManager.cpp  TownsSfxManager.h  sfx.h
tools/: CMakeLists.txt  Makefile.am  Makefile.common  def.h  dict.c  fhdr.sh  ftbl.sh  gs.pl  lzw.c  nsl.vim  pack_font.cpp  pack_lzc.cpp  spells.txt  tolower.sh  unpack_conv.cpp  unpack_font.cpp  unpack_lzc.cpp  unpack_maptiles.cpp  unpack_portraits.cpp  unpack_talk.cpp
tools/FMTownsU6/: Makefile  Makefile.common  unpack.cpp
usecode/: MDUseCode.cpp  MDUseCode.h  SEUseCode.cpp  SEUseCode.h  U6ObjectTypes.h  U6UseCode.cpp  U6UseCode.h  UseCode.cpp  UseCode.h
views/: ActorView.cpp  ActorView.h  ContainerViewGump.cpp  ContainerViewGump.h  ContainerWidget.cpp  ContainerWidget.h  ContainerWidgetGump.cpp  ContainerWidgetGump.h  DollViewGump.cpp  DollViewGump.h  DollWidget.cpp  DollWidget.h  DraggableView.cpp  DraggableView.h  InventoryFont.h  InventoryMessage.h  InventoryView.cpp  InventoryView.h  InventoryWidget.cpp  InventoryWidget.h  MDSkyStripWidget.cpp  MDSkyStripWidget.h  MapEditorView.cpp  MapEditorView.h  PartyView.cpp  PartyView.h  PortraitView.cpp  PortraitView.h  PortraitViewGump.cpp  PortraitViewGump.h  ScrollViewGump.cpp  ScrollViewGump.h  ScrollWidgetGump.cpp  ScrollWidgetGump.h  SignViewGump.cpp  SignViewGump.h  SpellView.cpp  SpellView.h  SpellViewGump.cpp  SpellViewGump.h  (+8 more)
visualc7/: dirent.cpp  dirent.h  nuvie.sln  nuvie.vcproj  vc7inc.h  visualc7_build_notes.txt
win32/: Nuvie.iss  exconfig.h  exconfig.rc  nvconfig.cc  nvconfig.def  nvconfig.rc
(+207 files in other folders)
